tests/reference/asr-incorrect_array_type_where_01-b613ee3.stderr
semantic error: 'where' clause requires a logical array
 --> tests/errors/incorrect_array_type_where_01.f90:5:10
  |
5 |    where([1, 2, 3, 4, 5]) b = 1
  |          ^^^^^^^^^^^^^^^ 
